--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,18 @@
 			<scope>provided</scope>
 		</dependency>
 		
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.31</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core-jakarta</artifactId>
+			<version>5.6.12.Final</version>
+		</dependency>
+		
 	</dependencies>
 
 
