--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,18 @@
 			<artifactId>hibernate-core-jakarta</artifactId>
 			<version>5.6.12.Final</version>
 		</dependency>
+
+		<dependency>
+			<groupId>es.cursojava.getafe</groupId>
+			<artifactId>PrimerProyectoProfe</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.oracle.database.jdbc</groupId>
+			<artifactId>ojdbc10</artifactId>
+			<version>19.21.0.0</version>
+		</dependency>
 		
 	</dependencies>
 
